* Stop quoting nonprintable characters in the getfacl output: what is printable
  or not depends on the locale settings, and getfacl often gets it wrong. We
  still need to quote a few special characters like newlines so that setfacl
  can always parse getfacl's output.
* Fix in acl_equiv_mode(): Return the mode that the acl corresponds to even
  when the acl has more than three entries (i.e., it is not equivalent to
  this mode).
* When restoring acls and the file ownership from the output of getfacl
  with setfacl --restore, make sure to only chown(2) files when the
  owner or owning group does not match the current owner or owning group:
  otherwise, if the caller does not have the appropriate privilege,
  chown(2) will implicitly clear the suid and sgid flags.

2.2.49
* Fix attr/acl code for handling of recursive walking without following symlinks
  Patch contributed by Brandon Philips <brandon@ifup.org>.
  http://oss.sgi.com/archives/xfs/2008-07/msg00162.html

2.2.48
* Fix NULL pointer access / segmentation fault in setfacl.
  When invoked as ``setfacl -- ...'', setfacl segfaults. Reported
  by Peng Haitao; fix based on patches by Peng Haitao and Jiri
  Moskovcak.  Final fix from Andreas Gruenbacher <agruen@suse.de>.
  Red Hat Bugzilla Bug 430458.

2.2.47 (4 December 2007)
* From Andreas Gruenbacher:
    * fix issues for tree walking with file descriptors
	- fd duplicates and running out

2.2.46 (21 November 2007)
* From Andreas Gruenbacher:
    * Update acl.5 man page to clarify the relationship between
      the file permissions and the *OBJ ACL entries.
    * In some cases, gcc does not link in functions from libmisc.a
      unless libmisc is specified before the dynamic libraries on
      the command line.
    * Rip out nftw tree walking, it is broken and hopeless to fix.
      The replacement walk_tree() function does exactly what we
      want, and is much simpler to use.

2.2.45 (11 September 2007)